fix: modify gap between form btns

--- a/src/components/FormButtons/FormButtons.module.scss
+++ b/src/components/FormButtons/FormButtons.module.scss
@@ -5,10 +5,6 @@
   justify-content: center;
   gap: 30px;
   
-  @media (max-width: 425px) {
-    gap: 10px;
-  }
-
   .submitBtn {
     text-transform: uppercase;
     @include formBtn(5px, 120px);
